# visitor-cpp

./: CMakeLists.txt  ReadMe.md
include/shapes/: area_visitor.h  circle.h  rectangle.h  shape.h  shape_visitor.h  triangle.h
src/: area_visitor.cpp  circle.cpp  main.cpp  rectangle.cpp  triangle.cpp
test/: test.cpp
